--- a/Xreveal_JPN.ini
+++ b/Xreveal_JPN.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x0411
-Name=Japanese(日本語)
-Version=2.7.5
+Name=Japanese (日本語)
+Version=2.7.9.3
 Author=Re*Index.(ot_inc)
 1=OK
 2=キャンセル
@@ -52,22 +52,22 @@ Author=Re*Index.(ot_inc)
 0=DVD
 3=DVD のサポートを有効化(&E)
 4=リージョンコードを削除
-5=Regional Code Enhancement(RCE) を解除
+5=Regional Code Enhancement (RCE) を解除
 6=リージョンコード:
 7=アナログプロテクトを解除
 8=ユーザー操作禁止を解除
 9=ARccOS を削除
 10=字幕を透過
 11=Xreveal で DVD を開くには <a>libdvdcss-2.dll</a> が必要です。
-12=Disable AutoRun
+12=自動再生を無効化
 
 [DIALOG_11]
 0=BD & UHD
 3=Blu-ray のサポートを有効化(&E)
-4=BD+ の解除
+4=BD+ を解除
 5=Blu-ray のリージョンコードを削除
 6=ディスクのリージョン:
-7=Remove &country code
+7=国コードを削除(&C)
 8=ユーザー操作禁止を解除
 9=コピーコントロール情報を削除
 10=BD-Live を無効化
@@ -139,7 +139,7 @@ Author=Re*Index.(ot_inc)
 3=HD DVD のサポートを有効化(&E)
 4=ファーストプレイタイトルを削除
 5=UOP の削除 (ユーザー操作の禁止)
-6=保護者による制限を解除する
+6=保護者による制限を解除
 7=KeyDB.cfg の場所
 
 [DIALOG_21]
@@ -181,12 +181,12 @@ Author=Re*Index.(ot_inc)
 [DIALOG_29]
 0=アクション
 3=スキャン後のアクション
-4=メディアをスキャン後に実行するコマンドを指定します。 <a>Supported macros</a>.
+4=メディアをスキャン後に実行するコマンドを指定します。 <a>対応しているマクロ</a>。
 
 [DIALOG_30]
-0=Country code
-3=Country
-4=Code
+0=国コード
+3=国
+4=コード
 
 [DIALOG_A]
 0=ソフトウェアのアップデート
@@ -271,7 +271,7 @@ Author=Re*Index.(ot_inc)
 55=プロパティ(&P)
 56=なし
 57=このプログラムは無料版です。\n\nこのプログラムが役に立った場合は、<a>寄付</a>をして機能の改善にご協力ください。
-58=%sはすでに存在します。\n置き換えますか？
+58=「%s」はすでに存在します。\n置き換えますか？
 59=本当にキャンセルしますか？
 60=ライセンスは %s に期限切れになりました。
 61=プレーヤー
@@ -317,7 +317,7 @@ Author=Re*Index.(ot_inc)
 101=ISO を検証する
 102=フォルダーを検証する
 103=ドライブを検証する
-104=バス暗号化に対応
+104=バスの暗号化に対応
 105=%s (ドライブ: %s)
 106=ログフォルダーを開く
 107=オプション
@@ -351,7 +351,7 @@ Author=Re*Index.(ot_inc)
 135=処理の中止を承認しました
 136=コピー中...
 137=Pro 版の機能
-138=Unregister
+138=登録を解除
 139=保護されたイメージファイルを作成します。ファイルは、Xreveal がインストールと実行がされている場合でのみ仮想ドライブから読み取ることができます！\n\n続行しますか？
 140=未完了のファイルを削除しますか？\n\n%s
 141=ライト
@@ -362,5 +362,5 @@ Author=Re*Index.(ot_inc)
 146=操作を再開
 147=プログラム
 148=ビジー
-149=&Check for updates
-150=&Save...
+149=アップデートを確認(&C)
+150=保存(&S)...
