--- a/Xreveal_BUL.ini
+++ b/Xreveal_BUL.ini
@@ -119,6 +119,12 @@ Author=jekovcar
 [DIALOG_16]
 0=Регион за плейър
 
+[DIALOG_17]
+0=Ripper
+3=Read retry count:
+4=Abort when ignored errors exceed :
+5=Copy only VIDEO_TS folder (DVD)
+
 [DIALOG_18]
 0=Регистрация на Xreveal
 3=Помощ
@@ -182,6 +188,8 @@ Author=jekovcar
 0=Действия
 3=Действие след сканиране
 4=Задайте команда, да се изпълни след сканиране на носителя. <a>Supported macros</a>.
+5=Post-Rip action
+6=Specify a command to run after ripping disc. <a>Supported macros</a>.
 
 [DIALOG_30]
 0=Код на страната
@@ -364,3 +372,8 @@ Author=jekovcar
 148=Зает
 149=&Провери за актуализации
 150=&Запиши...
+151=Drive certificate
+152=Enable
+153=Disable
+154=Paused
+155=Infinity
