--- a/Xreveal_CHS.ini
+++ b/Xreveal_CHS.ini
@@ -119,6 +119,12 @@ Author=Tanuki
 [DIALOG_16]
 0=播放器区域码
 
+[DIALOG_17]
+0=Ripper
+3=Read retry count:
+4=Abort when ignored errors exceed :
+5=Copy only VIDEO_TS folder (DVD)
+
 [DIALOG_18]
 0=注册
 3=帮助
@@ -182,6 +188,8 @@ Author=Tanuki
 0=动作
 3=扫描后动作
 4=指定打开碟片后自动运行的命令。<a>支持的宏变量</a>.
+5=Post-Rip action
+6=Specify a command to run after ripping disc. <a>Supported macros</a>.
 
 [DIALOG_30]
 0=国家码
@@ -364,3 +372,8 @@ Author=Tanuki
 148=忙
 149=检查更新(&C)
 150=保存(&S)...
+151=Drive certificate
+152=Enable
+153=Disable
+154=Paused
+155=Infinity
