--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -119,6 +119,12 @@ Author=Andex
 [DIALOG_16]
 0=Régions
 
+[DIALOG_17]
+0=Ripper
+3=Read retry count:
+4=Abort when ignored errors exceed :
+5=Copy only VIDEO_TS folder (DVD)
+
 [DIALOG_18]
 0=Enregistrement de la licence Pro
 3=&Aide
@@ -182,6 +188,8 @@ Author=Andex
 0=Actions
 3=Actions Post-Scan
 4=Spécifiez une commande à exécuter après le scan d'un média  <a>Macros supportées</a>
+5=Post-Rip action
+6=Specify a command to run after ripping disc. <a>Supported macros</a>.
 
 [DIALOG_30]
 0=Codes de pays
@@ -364,3 +372,8 @@ Author=Andex
 148=Occupé
 149=Vérifier les mises à jour
 150=&Enregistrer...
+151=Drive certificate
+152=Enable
+153=Disable
+154=Paused
+155=Infinity
