--- a/Xreveal_ITA.ini
+++ b/Xreveal_ITA.ini
@@ -119,6 +119,12 @@ Author=bovirus (bovirus@gmail.com)
 [DIALOG_16]
 0=Regione riproduttore
 
+[DIALOG_17]
+0=Ripper
+3=Read retry count:
+4=Abort when ignored errors exceed :
+5=Copy only VIDEO_TS folder (DVD)
+
 [DIALOG_18]
 0=Registra Xreveal
 3=?
@@ -182,6 +188,8 @@ Author=bovirus (bovirus@gmail.com)
 0=Actions
 3=Post-Scan action
 4=Specify a command to run after scanning media. <a>Supported macros</a>.
+5=Post-Rip action
+6=Specify a command to run after ripping disc. <a>Supported macros</a>.
 
 [DIALOG_30]
 0=Country code
@@ -364,3 +372,8 @@ Author=bovirus (bovirus@gmail.com)
 148=Busy
 149=&Check for updates
 150=&Save...
+151=Drive certificate
+152=Enable
+153=Disable
+154=Paused
+155=Infinity
