--- a/Xreveal_JPN.ini
+++ b/Xreveal_JPN.ini
@@ -119,6 +119,12 @@ Author=Re*Index.(ot_inc)
 [DIALOG_16]
 0=プレーヤーのリージョン
 
+[DIALOG_17]
+0=Ripper
+3=Read retry count:
+4=Abort when ignored errors exceed :
+5=Copy only VIDEO_TS folder (DVD)
+
 [DIALOG_18]
 0=登録
 3=ヘルプを開く
@@ -182,6 +188,8 @@ Author=Re*Index.(ot_inc)
 0=アクション
 3=スキャン後のアクション
 4=メディアをスキャン後に実行するコマンドを指定します。 <a>対応しているマクロ</a>。
+5=Post-Rip action
+6=Specify a command to run after ripping disc. <a>Supported macros</a>.
 
 [DIALOG_30]
 0=国コード
@@ -364,3 +372,8 @@ Author=Re*Index.(ot_inc)
 148=ビジー
 149=アップデートを確認(&C)
 150=保存(&S)...
+151=Drive certificate
+152=Enable
+153=Disable
+154=Paused
+155=Infinity
