--- a/Xreveal_KOR.ini
+++ b/Xreveal_KOR.ini
@@ -119,6 +119,12 @@ Author=VenusGirl (비너스걸)
 [DIALOG_16]
 0=재생 지역
 
+[DIALOG_17]
+0=Ripper
+3=Read retry count:
+4=Abort when ignored errors exceed :
+5=Copy only VIDEO_TS folder (DVD)
+
 [DIALOG_18]
 0=등록
 3=도움말
@@ -182,6 +188,8 @@ Author=VenusGirl (비너스걸)
 0=동작
 3=포트 검색 동작
 4=미디어를 검색한 후 실행할 명령을 지정합니다. <a>지원되는 매크로</a>.
+5=Post-Rip action
+6=Specify a command to run after ripping disc. <a>Supported macros</a>.
 
 [DIALOG_30]
 0=Country code
@@ -364,3 +372,8 @@ Author=VenusGirl (비너스걸)
 148=사용 중
 149=업데이트 확인(&C)
 150=&Save...
+151=Drive certificate
+152=Enable
+153=Disable
+154=Paused
+155=Infinity
