--- a/Xreveal_RUS.ini
+++ b/Xreveal_RUS.ini
@@ -119,6 +119,12 @@ Author=jekovcar
 [DIALOG_16]
 0=Регион плеера
 
+[DIALOG_17]
+0=Ripper
+3=Read retry count:
+4=Abort when ignored errors exceed :
+5=Copy only VIDEO_TS folder (DVD)
+
 [DIALOG_18]
 0=Регистрация Xreveal
 3=Помощь
@@ -182,6 +188,8 @@ Author=jekovcar
 0=Действия
 3=Действие после сканирования
 4=Укажите команду, которая будет выполняться после сканирования носителя. <a>Supported macros</a>.
+5=Post-Rip action
+6=Specify a command to run after ripping disc. <a>Supported macros</a>.
 
 [DIALOG_30]
 0=Код страны
@@ -364,3 +372,8 @@ Author=jekovcar
 148=Занятой
 149=&Проверить обновления
 150=&Сохранить...
+151=Drive certificate
+152=Enable
+153=Disable
+154=Paused
+155=Infinity
