--- a/Xreveal_SPA.ini
+++ b/Xreveal_SPA.ini
@@ -119,6 +119,12 @@ Author=Steven Rogers, Leandro Botella Penalva
 [DIALOG_16]
 0=Región de las Unidades
 
+[DIALOG_17]
+0=Ripper
+3=Read retry count:
+4=Abort when ignored errors exceed :
+5=Copy only VIDEO_TS folder (DVD)
+
 [DIALOG_18]
 0=Registrar Xreveal
 3=Ayuda
@@ -182,6 +188,8 @@ Author=Steven Rogers, Leandro Botella Penalva
 0=Acciones
 3=Acción post-análisis
 4=Especifica un comando a ejecutar tras abrir el disco. <a>Macros soportadas</a>.
+5=Post-Rip action
+6=Specify a command to run after ripping disc. <a>Supported macros</a>.
 
 [DIALOG_30]
 0=Código de país
@@ -364,3 +372,8 @@ Author=Steven Rogers, Leandro Botella Penalva
 148=Ocupado
 149=&Comprobar actualizaciones
 150=&Guardar...
+151=Drive certificate
+152=Enable
+153=Disable
+154=Paused
+155=Infinity
