--- a/Xreveal_DEU.ini
+++ b/Xreveal_DEU.ini
@@ -119,6 +119,12 @@ Author=The Punisher
 [DIALOG_16]
 0=Player-Region
 
+[DIALOG_17]
+0=Ripper
+3=Read retry count:
+4=Abort when ignored errors exceed :
+5=Copy only VIDEO_TS folder (DVD)
+
 [DIALOG_18]
 0=Xreveal registrieren
 3=Hilfe
@@ -182,6 +188,8 @@ Author=The Punisher
 0=Aktionen
 3=Aktion nach dem Scannen
 4=Erstellen oder laden Sie hier einen Befehl der nach dem Scannen einer Datei ausgeführt werden soll. <a>Unterstützte Macros</a>
+5=Post-Rip action
+6=Specify a command to run after ripping disc. <a>Supported macros</a>.
 
 [DIALOG_30]
 0=Ländercode
@@ -364,3 +372,8 @@ Author=The Punisher
 148=Beschäftigt
 149=Auf Updates &prüfen
 150=&Speichern...
+151=Drive certificate
+152=Enable
+153=Disable
+154=Paused
+155=Infinity
