--- a/Xreveal_CHS.ini
+++ b/Xreveal_CHS.ini
@@ -1,7 +1,7 @@
 ﻿[INFO]
 ID=0x0804
 Name=Chinese (简体中文)
-Version=2.7.8
+Version=2.8.0
 Author=Tanuki
 1=确定
 2=取消
@@ -121,9 +121,9 @@ Author=Tanuki
 
 [DIALOG_17]
 0=Ripper
-3=Read retry count:
-4=Abort when ignored errors exceed :
-5=Copy only VIDEO_TS folder (DVD)
+3=读取失败后重试次数:
+4=当忽略的读取错误超过阈值时中止:
+5=只拷贝 VIDEO_TS 文件夹 (DVD)
 
 [DIALOG_18]
 0=注册
@@ -162,6 +162,12 @@ Author=Tanuki
 
 [DIALOG_24]
 0=光驱信息
+12=默认值 (%s)
+13=是
+14=否
+15=全局 (%s)
+16=启用
+17=禁用
 
 [DIALOG_25]
 0=导入...
@@ -187,9 +193,9 @@ Author=Tanuki
 [DIALOG_29]
 0=动作
 3=扫描后动作
-4=指定打开碟片后自动运行的命令。<a>支持的宏变量</a>.
-5=Post-Rip action
-6=Specify a command to run after ripping disc. <a>Supported macros</a>.
+4=指定打开碟片后自动运行的命令。<a>支持的宏变量</a>。
+5=复制后动作
+6=指定复制碟片后自动运行的命令。<a>支持的宏变量</a>。
 
 [DIALOG_30]
 0=国家码
@@ -372,8 +378,9 @@ Author=Tanuki
 148=忙
 149=检查更新(&C)
 150=保存(&S)...
-151=Drive certificate
-152=Enable
-153=Disable
-154=Paused
-155=Infinity
+151=启用 LibreDrive
+152=光驱证书
+153=启用
+154=禁用
+155=暂停
+156=无限
