--- a/Xreveal_DEU.ini
+++ b/Xreveal_DEU.ini
@@ -162,6 +162,12 @@ Author=The Punisher
 
 [DIALOG_24]
 0=Laufwerk-Informationen
+12=Default value (%s)
+13=Force yes
+14=Force no
+15=Global value (%s)
+16=Enable
+17=Disable
 
 [DIALOG_25]
 0=Importieren...
@@ -372,8 +378,9 @@ Author=The Punisher
 148=Beschäftigt
 149=Auf Updates &prüfen
 150=&Speichern...
-151=Drive certificate
-152=Enable
-153=Disable
-154=Paused
-155=Infinity
+151=Enable LibreDrive
+152=Drive certificate
+153=Enable
+154=Disable
+155=Paused
+156=Infinity
