--- a/Xreveal_ENU.ini
+++ b/Xreveal_ENU.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x0409
 Name=English
-Version=2.7.8
+Version=2.8.0
 Author=
 1=OK
 2=Cancel
@@ -162,6 +162,12 @@ Author=
 
 [DIALOG_24]
 0=Drive Information
+12=Default value (%s)
+13=Force yes
+14=Force no
+15=Global value (%s)
+16=Enable
+17=Disable
 
 [DIALOG_25]
 0=Import...
@@ -372,8 +378,9 @@ Author=
 148=Busy
 149=&Check for updates
 150=&Save...
-151=Drive certificate
-152=Enable
-153=Disable
-154=Paused
-155=Infinity
+151=Enable LibreDrive
+152=Drive certificate
+153=Enable
+154=Disable
+155=Paused
+156=Infinity
