--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -1,7 +1,7 @@
-[INFO]
+﻿[INFO]
 ID=0x040C
 Name=French (Français)
-Version=2.7.8
+Version=2.8.0
 Author=Andex
 1=OK
 2=Annuler
@@ -120,10 +120,10 @@ Author=Andex
 0=Régions
 
 [DIALOG_17]
-0=Ripper
-3=Read retry count:
-4=Abort when ignored errors exceed :
-5=Copy only VIDEO_TS folder (DVD)
+0=Copie
+3=Tentatives de lecture:
+4=Abandonner lorsque le nombre d'erreurs ignorées dépasse:
+5=Copier seulement le dossier 'VIDEO_TS' (DVD)
 
 [DIALOG_18]
 0=Enregistrement de la licence Pro
@@ -133,7 +133,7 @@ Author=Andex
 [DIALOG_19]
 0=Raccourcis
 3=Les raccourcis créés ici fonctionnent dans Windows quand Xreveal s'exécute en arrière-plan.
-4=Menu de Xreveal:
+4=Afficher le menu:
 5=Paramètres:
 6=Activer/Désactiver:
 7=Copier en fichier ISO:
@@ -162,6 +162,12 @@ Author=Andex
 
 [DIALOG_24]
 0=Informations sur le lecteur
+12=Default value (%s)
+13=Force yes
+14=Force no
+15=Global value (%s)
+16=Enable
+17=Disable
 
 [DIALOG_25]
 0=Importer un catalogue...
@@ -186,10 +192,10 @@ Author=Andex
 
 [DIALOG_29]
 0=Actions
-3=Actions Post-Scan
+3=Actions post-scan
 4=Spécifiez une commande à exécuter après le scan d'un média  <a>Macros supportées</a>
-5=Post-Rip action
-6=Specify a command to run after ripping disc. <a>Supported macros</a>.
+5=Actions post-copie
+6=Spécifiez une commande à exécuter après la copie d'un média  <a>Macros supportées</a>
 
 [DIALOG_30]
 0=Codes de pays
@@ -253,8 +259,8 @@ Author=Andex
 29=Lecteur
 30=Fabricant
 31=Produit
-32=Révision
-33=Date du firmware
+32=Version du firmware
+33=Révision
 34=N° de série
 35=N/A
 36=Oui
@@ -273,7 +279,7 @@ Author=Andex
 49=&Commentaires
 50=&Outils
 51=À propos de &Xreveal
-52=Quitter
+52=Quitter Xreveal
 53=&Ejecter
 54=&Charger
 55=&Propriétés
@@ -332,7 +338,7 @@ Author=Andex
 108=Sortie détaillée
 109=Version en ligne de commande (Windows/macOS/Linux)
 110=Stop!
-111=Fabricant
+111=Révision
 112=Le dossier '%s' n'existe pas!\nVoulez-vous le créer?
 113=Quand fini:
 114=Ne rien faire
@@ -372,8 +378,9 @@ Author=Andex
 148=Occupé
 149=Vérifier les mises à jour
 150=&Enregistrer...
-151=Drive certificate
-152=Enable
-153=Disable
-154=Paused
-155=Infinity
+151=Enable LibreDrive
+152=Certificat du lecteur
+153=Activé
+154=Désactivé
+155=En pause!
+156=Infini
