--- a/Xreveal_JPN.ini
+++ b/Xreveal_JPN.ini
@@ -162,6 +162,12 @@ Author=Re*Index.(ot_inc)
 
 [DIALOG_24]
 0=ドライブの情報
+12=Default value (%s)
+13=Force yes
+14=Force no
+15=Global value (%s)
+16=Enable
+17=Disable
 
 [DIALOG_25]
 0=インポート...
@@ -372,8 +378,9 @@ Author=Re*Index.(ot_inc)
 148=ビジー
 149=アップデートを確認(&C)
 150=保存(&S)...
-151=Drive certificate
-152=Enable
-153=Disable
-154=Paused
-155=Infinity
+151=Enable LibreDrive
+152=Drive certificate
+153=Enable
+154=Disable
+155=Paused
+156=Infinity
