--- a/Xreveal_BUL.ini
+++ b/Xreveal_BUL.ini
@@ -162,6 +162,12 @@ Author=jekovcar
 
 [DIALOG_24]
 0=Информация За Устройство
+12=Default value (%s)
+13=Force yes
+14=Force no
+15=Global value (%s)
+16=Enable
+17=Disable
 
 [DIALOG_25]
 0=Импорт...
@@ -372,8 +378,9 @@ Author=jekovcar
 148=Зает
 149=&Провери за актуализации
 150=&Запиши...
-151=Drive certificate
-152=Enable
-153=Disable
-154=Paused
-155=Infinity
+151=Enable LibreDrive
+152=Drive certificate
+153=Enable
+154=Disable
+155=Paused
+156=Infinity
