--- a/Xreveal_KOR.ini
+++ b/Xreveal_KOR.ini
@@ -162,6 +162,12 @@ Author=VenusGirl (비너스걸)
 
 [DIALOG_24]
 0=드라이브 정보
+12=Default value (%s)
+13=Force yes
+14=Force no
+15=Global value (%s)
+16=Enable
+17=Disable
 
 [DIALOG_25]
 0=가져오기...
@@ -372,8 +378,9 @@ Author=VenusGirl (비너스걸)
 148=사용 중
 149=업데이트 확인(&C)
 150=&Save...
-151=Drive certificate
-152=Enable
-153=Disable
-154=Paused
-155=Infinity
+151=Enable LibreDrive
+152=Drive certificate
+153=Enable
+154=Disable
+155=Paused
+156=Infinity
