--- a/Xreveal_SPA.ini
+++ b/Xreveal_SPA.ini
@@ -162,6 +162,12 @@ Author=Steven Rogers, Leandro Botella Penalva
 
 [DIALOG_24]
 0=Información de la Unidad
+12=Default value (%s)
+13=Force yes
+14=Force no
+15=Global value (%s)
+16=Enable
+17=Disable
 
 [DIALOG_25]
 0=Importar...
@@ -372,8 +378,9 @@ Author=Steven Rogers, Leandro Botella Penalva
 148=Ocupado
 149=&Comprobar actualizaciones
 150=&Guardar...
-151=Drive certificate
-152=Enable
-153=Disable
-154=Paused
-155=Infinity
+151=Enable LibreDrive
+152=Drive certificate
+153=Enable
+154=Disable
+155=Paused
+156=Infinity
