Update Xreveal_FRA.ini (2.8.0)

--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -1,4 +1,4 @@
-﻿[INFO]
+[INFO]
 ID=0x040C
 Name=French (Français)
 Version=2.8.0
@@ -162,12 +162,12 @@ Author=Andex
 
 [DIALOG_24]
 0=Informations sur le lecteur
-12=Default value (%s)
-13=Force yes
-14=Force no
-15=Global value (%s)
-16=Enable
-17=Disable
+12=Valeur par défaut (%s)
+13='Oui' forcé
+14='Non' forcé
+15=Valeur globale (%s)
+16=Activé
+17=Désactivé
 
 [DIALOG_25]
 0=Importer un catalogue...
@@ -375,10 +375,10 @@ Author=Andex
 145=Mettre la copie en pause
 146=Continuer la copie...
 147=Programmes
-148=Occupé
+148=Occupé!
 149=Vérifier les mises à jour
 150=&Enregistrer...
-151=Enable LibreDrive
+151=LibreDrive disponible
 152=Certificat du lecteur
 153=Activé
 154=Désactivé
