--- a/Xreveal_KOR.ini
+++ b/Xreveal_KOR.ini
@@ -1,8 +1,8 @@
 ﻿[INFO]
 ID=0x0412
 Name=Korean (한국어)
-Version=2.7.6
-Author=VenusGirl (비너스걸)
+Version=2.8.0
+Author=비너스걸 (VenusGirl)
 1=확인
 2=취소
 
@@ -42,7 +42,7 @@ Author=VenusGirl (비너스걸)
 6=시스템 트레이 메뉴에 드라이브 나열(&L)
 7=자동으로 업데이트 확인(&C)
 8=<a>지금 확인</a>
-9=Theme:
+9=테마:
 
 [DIALOG_9]
 0=CD
@@ -59,7 +59,7 @@ Author=VenusGirl (비너스걸)
 9=ARccOS 제거
 10=자막 투명도
 11=Xreveal에서 DVD를 열려면 <a>libdvdcss-2.dll</a>이 필요합니다.
-12=Disable AutoRun
+12=자동실행 사용 안 함
 
 [DIALOG_11]
 0=Blu-ray
@@ -67,7 +67,7 @@ Author=VenusGirl (비너스걸)
 4=BD+ 보호 제거
 5=Blu-ray 지역 코드 제거
 6=디스크 지역:
-7=Remove &country code
+7=국가 코드 제거(&C)
 8=금지된 사용자 작업 제거
 9=복사 제어 정보 제거
 10=BD-Live 사용 안 함
@@ -120,10 +120,10 @@ Author=VenusGirl (비너스걸)
 0=재생 지역
 
 [DIALOG_17]
-0=Ripper
-3=Read retry count:
-4=Abort when ignored errors exceed :
-5=Copy only VIDEO_TS folder (DVD)
+0=리퍼
+3=읽기 재시도 횟수:
+4=무시된 오류가 초과하면 중단 :
+5=VIDEO_TS 폴더만 복사 (DVD)
 
 [DIALOG_18]
 0=등록
@@ -162,12 +162,12 @@ Author=VenusGirl (비너스걸)
 
 [DIALOG_24]
 0=드라이브 정보
-12=Default value (%s)
-13=Force yes
-14=Force no
-15=Global value (%s)
-16=Enable
-17=Disable
+12=기본값 (%s)
+13=강제 예
+14=강제 아니오
+15=전역값 (%s)
+16=사용함
+17=사용 안 함
 
 [DIALOG_25]
 0=가져오기...
@@ -194,13 +194,13 @@ Author=VenusGirl (비너스걸)
 0=동작
 3=포트 검색 동작
 4=미디어를 검색한 후 실행할 명령을 지정합니다. <a>지원되는 매크로</a>.
-5=Post-Rip action
-6=Specify a command to run after ripping disc. <a>Supported macros</a>.
+5=추출 후 작업
+6=디스크를 복사한 후 실행할 명령을 지정합니다. <a>지원되는 매크로</a>.
 
 [DIALOG_30]
-0=Country code
-3=Country
-4=Code
+0=국가 코드
+3=국가
+4=코드
 
 [DIALOG_A]
 0=소프트웨어 업데이트
@@ -377,10 +377,10 @@ Author=VenusGirl (비너스걸)
 147=프로그램
 148=사용 중
 149=업데이트 확인(&C)
-150=&Save...
-151=Enable LibreDrive
-152=Drive certificate
-153=Enable
-154=Disable
-155=Paused
-156=Infinity
+150=저장(&S)...
+151=LibreDrive 사용
+152=드라이브 인증서
+153=사용함
+154=사용 안 함
+155=일시 중지
+156=무한대
