--- a/Xreveal_BUL.ini
+++ b/Xreveal_BUL.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x0402
 Name=Bulgarian(Български)
-Version=2.7.8
+Version=2.8.0
 Author=jekovcar
 1=ОК
 2=Отказ
@@ -120,10 +120,10 @@ Author=jekovcar
 0=Регион за плейър
 
 [DIALOG_17]
-0=Ripper
-3=Read retry count:
-4=Abort when ignored errors exceed :
-5=Copy only VIDEO_TS folder (DVD)
+0=Рипър
+3=Брой опити за четене:
+4=Прекрати, когато грешките надвишат :
+5=Копирай само VIDEO_TS folder (DVD)
 
 [DIALOG_18]
 0=Регистрация на Xreveal
@@ -162,12 +162,12 @@ Author=jekovcar
 
 [DIALOG_24]
 0=Информация За Устройство
-12=Default value (%s)
-13=Force yes
-14=Force no
-15=Global value (%s)
-16=Enable
-17=Disable
+12=Стойност по подразб. (%s)
+13=Форсирано да
+14=Форсирано не
+15=Глобална стойност (%s)
+16=Включи
+17=Изключи
 
 [DIALOG_25]
 0=Импорт...
@@ -193,9 +193,9 @@ Author=jekovcar
 [DIALOG_29]
 0=Действия
 3=Действие след сканиране
-4=Задайте команда, да се изпълни след сканиране на носителя. <a>Supported macros</a>.
-5=Post-Rip action
-6=Specify a command to run after ripping disc. <a>Supported macros</a>.
+4=Задайте команда, да се изпълни след сканиране на носителя. <a>Поддържа макроси</a>.
+5=След-Рип действие
+6=Укажете команда за стартиране след извличане на диска. <a>Поддържа макроси</a>.
 
 [DIALOG_30]
 0=Код на страната
@@ -378,9 +378,9 @@ Author=jekovcar
 148=Зает
 149=&Провери за актуализации
 150=&Запиши...
-151=Enable LibreDrive
-152=Drive certificate
-153=Enable
-154=Disable
-155=Paused
-156=Infinity
+151=Активирай LibreDrive
+152=Драйв сертификат
+153=Включи
+154=Изключи
+155=Пауза
+156=Безкрай
