--- a/Xreveal_RUS.ini
+++ b/Xreveal_RUS.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x0419
 Name=Russian (Русский)
-Version=2.7.8
+Version=2.8.0
 Author=jekovcar
 1=ОК
 2=Отмена
@@ -120,10 +120,10 @@ Author=jekovcar
 0=Регион плеера
 
 [DIALOG_17]
-0=Ripper
-3=Read retry count:
-4=Abort when ignored errors exceed :
-5=Copy only VIDEO_TS folder (DVD)
+0=Риппер
+3=Счет попыток чтения:
+4=Прервать, если игнорируемых ошибок превышает :
+5=Копировать только VIDEO_TS folder (DVD)
 
 [DIALOG_18]
 0=Регистрация Xreveal
@@ -162,12 +162,12 @@ Author=jekovcar
 
 [DIALOG_24]
 0=Информация о приводе
-12=Default value (%s)
-13=Force yes
-14=Force no
-15=Global value (%s)
-16=Enable
-17=Disable
+12=Значение по умолчанию (%s)
+13=Форсированно да
+14=Форсированно нет
+15=Глобальное значение (%s)
+16=Включить
+17=Отключить
 
 [DIALOG_25]
 0=Импорт...
@@ -193,9 +193,9 @@ Author=jekovcar
 [DIALOG_29]
 0=Действия
 3=Действие после сканирования
-4=Укажите команду, которая будет выполняться после сканирования носителя. <a>Supported macros</a>.
-5=Post-Rip action
-6=Specify a command to run after ripping disc. <a>Supported macros</a>.
+4=Команда, которая будет выполняться после сканирования носителя. <a>Поддерживаемые макросы</a>.
+5=Действие после Риппа
+6=Команда для выполнения после копирования диска. <a>Поддерживаемые макросы</a>.
 
 [DIALOG_30]
 0=Код страны
@@ -378,9 +378,9 @@ Author=jekovcar
 148=Занятой
 149=&Проверить обновления
 150=&Сохранить...
-151=Enable LibreDrive
-152=Drive certificate
-153=Enable
-154=Disable
-155=Paused
-156=Infinity
+151=Включить LibreDrive
+152=Сертификат привода
+153=Включить
+154=Отключить
+155=Приостановлено
+156=Без конца
