Update SPA to 2.8.0

--- a/Xreveal_SPA.ini
+++ b/Xreveal_SPA.ini
@@ -1,7 +1,7 @@
 ﻿[INFO]
 ID=0x040A
 Name=Spanish (Español)
-Version=2.7.8
+Version=2.8.0
 Author=Steven Rogers, Leandro Botella Penalva
 1=Aceptar
 2=Cancelar
@@ -120,10 +120,10 @@ Author=Steven Rogers, Leandro Botella Penalva
 0=Región de las Unidades
 
 [DIALOG_17]
-0=Ripper
-3=Read retry count:
-4=Abort when ignored errors exceed :
-5=Copy only VIDEO_TS folder (DVD)
+0=Copiador
+3=Número de reintentos de lectura:
+4=Abortar cuando los errores ignorados excedan :
+5=Copiar solo la carpeta VIDEO_TS (DVD)
 
 [DIALOG_18]
 0=Registrar Xreveal
@@ -162,12 +162,12 @@ Author=Steven Rogers, Leandro Botella Penalva
 
 [DIALOG_24]
 0=Información de la Unidad
-12=Default value (%s)
-13=Force yes
-14=Force no
-15=Global value (%s)
-16=Enable
-17=Disable
+12=Valor predeterminado (%s)
+13=Forzar sí
+14=Forzar no
+15=Valor global (%s)
+16=Habilitar
+17=Deshabilitar
 
 [DIALOG_25]
 0=Importar...
@@ -192,10 +192,10 @@ Author=Steven Rogers, Leandro Botella Penalva
 
 [DIALOG_29]
 0=Acciones
-3=Acción post-análisis
-4=Especifica un comando a ejecutar tras abrir el disco. <a>Macros soportadas</a>.
-5=Post-Rip action
-6=Specify a command to run after ripping disc. <a>Supported macros</a>.
+3=Acción Post-Análisis
+4=Especifica un comando a ejecutar tras abrir disco. <a>Macros soportadas</a>.
+5=Acción Post-Copia
+6=Especifica un comando a ejecutar tras copiar disco. <a>Macros soportadas</a>.
 
 [DIALOG_30]
 0=Código de país
@@ -378,9 +378,9 @@ Author=Steven Rogers, Leandro Botella Penalva
 148=Ocupado
 149=&Comprobar actualizaciones
 150=&Guardar...
-151=Enable LibreDrive
-152=Drive certificate
-153=Enable
-154=Disable
-155=Paused
-156=Infinity
+151=Habilitar LibreDrive
+152=Certificado de la unidad
+153=Habilitar
+154=Deshabilitar
+155=Pausado
+156=Infinito
