--- a/Xreveal_DEU.ini
+++ b/Xreveal_DEU.ini
@@ -1,7 +1,7 @@
 ﻿[INFO]
 ID=0x0407
 Name=German (Deutsch)
-Version=2.7.7
+Version=2.8.0
 Author=The Punisher
 1=OK
 2=Abbrechen
@@ -43,6 +43,8 @@ Author=The Punisher
 7=Automatisch Online auf Updates überprüfen
 8=<a>Jetzt prüfen</a>
 9=Schema:
+10=&AES Hardwarebeschleunigung nutzen
+11=<a>Benchmark</a>
 
 [DIALOG_9]
 0=CD
@@ -73,8 +75,6 @@ Author=The Punisher
 10=BD-Live deaktivieren
 11=Angeschlossenes 3D-Display simulieren
 12=AACS &Ordner umbenennen als
-13=&AES Hardwarebeschleunigung nutzen
-14=<a>Benchmark</a>
 15=Entfernung von &störender Werbung und Trailern
 16=Entfernung von Video-Sequenzen kürzer als %s Minuten
 
@@ -121,9 +121,9 @@ Author=The Punisher
 
 [DIALOG_17]
 0=Ripper
-3=Read retry count:
-4=Abort when ignored errors exceed :
-5=Copy only VIDEO_TS folder (DVD)
+3=Anzahl wiederholter Leseversuche:
+4=Abbrechen wenn ignorierte Fehler mehr als:
+5=Nur VIDEO_TS Ordner kopieren (DVD)
 
 [DIALOG_18]
 0=Xreveal registrieren
@@ -162,12 +162,12 @@ Author=The Punisher
 
 [DIALOG_24]
 0=Laufwerk-Informationen
-12=Default value (%s)
-13=Force yes
-14=Force no
-15=Global value (%s)
-16=Enable
-17=Disable
+12=Standardwert (%s)
+13=Erzwinge JA
+14=Erzwinge NEIN
+15=Systemwert (%s)
+16=Aktivieren
+17=Deaktivieren
 
 [DIALOG_25]
 0=Importieren...
@@ -194,8 +194,8 @@ Author=The Punisher
 0=Aktionen
 3=Aktion nach dem Scannen
 4=Erstellen oder laden Sie hier einen Befehl der nach dem Scannen einer Datei ausgeführt werden soll. <a>Unterstützte Macros</a>
-5=Post-Rip action
-6=Specify a command to run after ripping disc. <a>Supported macros</a>.
+5=Aktion nach dem Rippen
+6=Laden Sie hier einen Befehl der nach dem Scannen einer Datei ausgeführt werden soll. <a>Unterstützte Macros</a>
 
 [DIALOG_30]
 0=Ländercode
@@ -255,7 +255,7 @@ Author=The Punisher
 25=Vorgang erfolgreich abgeschlossen!
 26=Keine Entschlüsselungsdatei in {%s} gefunden
 27=
-28=Xreveal konnte die Disc nicht öffnen. Fehler-Code: %s.
+28=Xreveal konnte die Disc nicht öffnen. Fehler-Info: %s.
 29=Laufwerk
 30=Anbieter
 31=Produkt
@@ -378,9 +378,9 @@ Author=The Punisher
 148=Beschäftigt
 149=Auf Updates &prüfen
 150=&Speichern...
-151=Enable LibreDrive
-152=Drive certificate
-153=Enable
-154=Disable
-155=Paused
+151=LibreDrive aktivieren
+152=Laufwerkszertifikat
+153=Aktivieren
+154=Deaktivieren
+155=Pausiert
 156=Infinity
