--- a/Xreveal_CHS.ini
+++ b/Xreveal_CHS.ini
@@ -64,7 +64,7 @@ Author=Tanuki
 12=禁用 AutoRun
 
 [DIALOG_11]
-0=BD & UHD
+0=BD / UHD
 3=启用 BD 支持(&B)
 4=移除 &BD+
 5=移除 R&C (区域码)
@@ -384,3 +384,6 @@ Author=Tanuki
 154=禁用
 155=暂停
 156=无限
+157=Are you sure you want to unregister?
+158=No drives are scanned by Xreveal! You can change the settings in <a>My Drives</a>.
+159=There is no enough space on destination drive %C:!
