--- a/Xreveal_DEU.ini
+++ b/Xreveal_DEU.ini
@@ -123,7 +123,7 @@ Author=The Punisher
 0=Ripper
 3=Anzahl wiederholter Leseversuche:
 4=Abbrechen wenn ignorierte Fehler mehr als:
-5=Nur VIDEO_TS Ordner kopieren (DVD)
+5=Nur VIDEO_TS-Ordner kopieren (DVD)
 
 [DIALOG_18]
 0=Xreveal registrieren
@@ -383,4 +383,7 @@ Author=The Punisher
 153=Aktivieren
 154=Deaktivieren
 155=Pausiert
-156=Infinity
+156=Endlos
+157=Are you sure you want to unregister?
+158=No drives are scanned by Xreveal! You can change the settings in <a>My Drives</a>.
+159=There is no enough space on destination drive %C:!
