--- a/Xreveal_ENU.ini
+++ b/Xreveal_ENU.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x0409
 Name=English
-Version=2.8.0
+Version=2.8.1
 Author=
 1=OK
 2=Cancel
@@ -64,7 +64,7 @@ Author=
 12=Disable AutoRun
 
 [DIALOG_11]
-0=BD & UHD
+0=BD / UHD
 3=&Enable Blu-ray support
 4=Remove &BD+
 5=Remove &RC (Region Code)
@@ -384,3 +384,6 @@ Author=
 154=Disable
 155=Paused
 156=Infinity
+157=Are you sure you want to unregister?
+158=No drives are scanned by Xreveal! You can change the settings in <a>My Drives</a>.
+159=There is no enough space on destination drive %C:!
