--- a/Xreveal_FIN.ini
+++ b/Xreveal_FIN.ini
@@ -384,3 +384,6 @@ Author=TJL
 154=Disable
 155=Paused
 156=Infinity
+157=Are you sure you want to unregister?
+158=No drives are scanned by Xreveal! You can change the settings in <a>My Drives</a>.
+159=There is no enough space on destination drive %C:!
