--- a/Xreveal_KOR.ini
+++ b/Xreveal_KOR.ini
@@ -384,3 +384,6 @@ Author=비너스걸 (VenusGirl)
 154=사용 안 함
 155=일시 중지
 156=무한대
+157=Are you sure you want to unregister?
+158=No drives are scanned by Xreveal! You can change the settings in <a>My Drives</a>.
+159=There is no enough space on destination drive %C:!
