--- a/Xreveal_SPA.ini
+++ b/Xreveal_SPA.ini
@@ -384,3 +384,6 @@ Author=Steven Rogers, Leandro Botella Penalva
 154=Deshabilitar
 155=Pausado
 156=Infinito
+157=Are you sure you want to unregister?
+158=No drives are scanned by Xreveal! You can change the settings in <a>My Drives</a>.
+159=There is no enough space on destination drive %C:!
