--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -384,3 +384,6 @@ Author=Andex
 154=Désactivé
 155=En pause!
 156=Infini
+157=Are you sure you want to unregister?
+158=No drives are scanned by Xreveal! You can change the settings in <a>My Drives</a>.
+159=There is no enough space on destination drive %C:!
