--- a/Xreveal_RUS.ini
+++ b/Xreveal_RUS.ini
@@ -384,3 +384,6 @@ Author=jekovcar
 154=Отключить
 155=Приостановлено
 156=Без конца
+157=Are you sure you want to unregister?
+158=No drives are scanned by Xreveal! You can change the settings in <a>My Drives</a>.
+159=There is no enough space on destination drive %C:!
