Update Xreveal_FRA.ini (2.8.1)

--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x040C
 Name=French (Français)
-Version=2.8.0
+Version=2.8.1
 Author=Andex
 1=OK
 2=Annuler
@@ -64,7 +64,7 @@ Author=Andex
 12=&Désactiver la lecture automatique
 
 [DIALOG_11]
-0=BD & UHD
+0=BD / UHD
 3=&Activer la prise en charge des Blu-ray
 4=Supprimer &BD+
 5=Supprimer &RC (Region Code)
@@ -384,6 +384,6 @@ Author=Andex
 154=Désactivé
 155=En pause!
 156=Infini
-157=Are you sure you want to unregister?
-158=No drives are scanned by Xreveal! You can change the settings in <a>My Drives</a>.
-159=There is no enough space on destination drive %C:!
+157=Etes-vous sûr de vouloir annuler votre licence?
+158=Aucun lecteur à scanner par Xreveal!\nVeuillez en sélectionner au moins un dans <a>Lecteurs</a>
+159=Il n'y a pas assez d'espace libre sur le lecteur %C:!
