--- a/Xreveal_BUL.ini
+++ b/Xreveal_BUL.ini
@@ -254,7 +254,7 @@ Author=jekovcar
 24=%.1f MB/s
 25=Операцията приключи успешно!
 26=Няма намерен ключ за дешифриране в {%s}
-27=
+27=&Homepage
 28=Xreveal неуспешно отваряне на диска, код на грешка: %s.
 29=Диск
 30=Доставчик
