--- a/Xreveal_DEU.ini
+++ b/Xreveal_DEU.ini
@@ -254,7 +254,7 @@ Author=The Punisher
 24=%.1f MB/s
 25=Vorgang erfolgreich abgeschlossen!
 26=Keine Entschlüsselungsdatei in {%s} gefunden
-27=
+27=&Homepage
 28=Xreveal konnte die Disc nicht öffnen. Fehler-Info: %s.
 29=Laufwerk
 30=Anbieter
