--- a/Xreveal_ENU.ini
+++ b/Xreveal_ENU.ini
@@ -254,7 +254,7 @@ Author=
 24=%.1f MB/s
 25=Operation completed successfully!
 26=The disc key is not found! {%s}
-27=
+27=&Homepage
 28=Failed to open disc, error code: %s.
 29=Drive
 30=Vendor
