--- a/Xreveal_FIN.ini
+++ b/Xreveal_FIN.ini
@@ -254,7 +254,7 @@ Author=TJL
 24=%.1f MB/s
 25=Operation completed successfully!
 26=Salauksenpurkuavainta ei löytynyt kohteesta {%s}
-27=
+27=&Homepage
 28=Failed to open disc, error code: %s.
 29=Levyasema
 30=Valmistaja
