--- a/Xreveal_IND.ini
+++ b/Xreveal_IND.ini
@@ -254,7 +254,7 @@ Author= Lieba Natur Brilian (naturbrilian)
 24=%.1f MB/s
 25=Operasi selesai!
 26=Tidak ada key decrypt yang ditemukan di {%s}
-27=
+27=&Homepage
 28=Xreveal gagal untuk membuka disk, kode kesalahan: %s
 29=Drive
 30=Vendor
