--- a/Xreveal_ITA.ini
+++ b/Xreveal_ITA.ini
@@ -254,7 +254,7 @@ Author=bovirus (bovirus@gmail.com)
 24=%.1f MB/s
 25=Operation completed successfully!
 26=La chiave del disco non è stata trovata in {%s}
-27=
+27=Sito &web programma
 28=Xreveal non è riuscito ad aprire il disco, codice errore: %s.
 29=Unità
 30=Produttore
