--- a/Xreveal_JPN.ini
+++ b/Xreveal_JPN.ini
@@ -254,7 +254,7 @@ Author=Re*Index.(ot_inc)
 24=%.1f MB/s
 25=操作は正常に完了しました！
 26={%s} に復号化キーが見つかりません
-27=
+27=ホームページを開く(&H)
 28=Xreveal はディスクを開けませんでした。エラーコード: %s
 29=ドライブ
 30=ベンダー
