--- a/Xreveal_KOR.ini
+++ b/Xreveal_KOR.ini
@@ -254,7 +254,7 @@ Author=비너스걸 (VenusGirl)
 24=%.1f MB/s
 25=작업이 성공적으로 완료되었습니다!
 26={%s}에 암호 해독 키가 없습니다
-27=
+27=홈페이지(&H)
 28=Xreveal에서 디스크를 열지 못했습니다(오류 코드): %s.
 29=드라이브
 30=공급업체
