--- a/Xreveal_PLK.ini
+++ b/Xreveal_PLK.ini
@@ -254,7 +254,7 @@ Author=Fresta
 24=%.1f MB/s
 25=Operation completed successfully!
 26=Xreveal nie mógł znaleźć klucza deszyfrującego w KeyDB.cfg
-27=
+27=Strona &domowa
 28=Failed to open disc, error code: %s.
 29=Napęd
 30=Sprzedawca
