--- a/Xreveal_SLV.ini
+++ b/Xreveal_SLV.ini
@@ -254,7 +254,7 @@ Author=Jadran Rudec, E-pošta: jrudec@gmail.com
 24=%.1f MB/s
 25=Operation completed successfully!
 26=V {%s} ni bilo mogoče najti ključa za dešifriranje
-27=
+27=&Domača stran
 28=Failed to open disc, error code: %s.
 29=Pogon
 30=Dobavitelj
