--- a/Xreveal_SPA.ini
+++ b/Xreveal_SPA.ini
@@ -254,7 +254,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 24=%.1f MB/s
 25=¡Operación completada correctamente!
 26=¡No se encontró la clave del disco! {%s}
-27=
+27=&Página principal
 28=Fallo al abrir el disco, código de error: %s.
 29=Unidad
 30=Fabricante
