--- a/Xreveal_SVE.ini
+++ b/Xreveal_SVE.ini
@@ -254,7 +254,7 @@ Author=Sopor
 24=%.1f MB/s
 25=Operation completed successfully!
 26=Ingen dekrypteringsnyckel hittades i {%s}
-27=
+27=&Hemsida
 28=Failed to open disc, error code: %s.
 29=Enhet
 30=Leverantör
