--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -254,7 +254,7 @@ Author=Andex
 24=%.1f Mo/s
 25=Processus terminé avec succès!
 26=Pas de clé de déchiffrement trouvée dans {%s}!
-27=
+27=&Visiter le site web...
 28=Echec d'ouverture du disque, code d'erreur: %s
 29=Lecteur
 30=Fabricant
