--- a/Xreveal_RUS.ini
+++ b/Xreveal_RUS.ini
@@ -254,7 +254,7 @@ Author=jekovcar
 24=%.1f МБ/с
 25=Операция завершена успешно!
 26=В {%s} не найден ключ дешифрования
-27=
+27=&Домашняя страница
 28=Xreveal не удалось открыть диск, код ошибки: %s.
 29=Привод
 30=Поставщик
