--- a/Xreveal_CHS.ini
+++ b/Xreveal_CHS.ini
@@ -102,10 +102,13 @@ Author=Tanuki
 10=剩余空间:
 11=容量:
 12=保留保护(&K)
-13=验证视频文件哈希值(&V)
-14=创建 &md5 校验文件
+13=验证视频文件哈希值(&H)
+14=创建 &MD5 校验文件
 15=创建 &dvdid.xml
 16=创建日志文件
+17=Create disc.&metaiso
+18=Copy only &VIDEO_TS folder
+19=Verify &M2TS files
 
 [DIALOG_15]
 0=Xreveal
