--- a/Xreveal_DEU.ini
+++ b/Xreveal_DEU.ini
@@ -102,10 +102,13 @@ Author=The Punisher
 10=Freier Speicherplatz:
 11=Kapazität:
 12=&Schutz nicht entfernen
-13=&Überprüfung: Content Hash
-14=Erstelle &md5 checksum Datei
+13=Überprüfung: Content &Hash
+14=Erstelle &MD5 checksum Datei
 15=Erstelle &dvdid.xml
 16=Erstelle Log Datei
+17=Create disc.&metaiso
+18=Copy only &VIDEO_TS folder
+19=Verify &M2TS files
 
 [DIALOG_15]
 0=Xreveal
