--- a/Xreveal_ENU.ini
+++ b/Xreveal_ENU.ini
@@ -102,10 +102,13 @@ Author=
 10=Free space:
 11=Capacity:
 12=&Keep protection
-13=&Verify content hash
-14=Create &md5 checksum file
+13=Verify content &hash
+14=Create &MD5 checksum file
 15=Create &dvdid.xml
 16=Create log file
+17=Create disc.&metaiso
+18=Copy only &VIDEO_TS folder
+19=Verify &M2TS files
 
 [DIALOG_15]
 0=Xreveal
