--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -106,6 +106,9 @@ Author=Andex
 14=Créer un fichier de contrôle &MD5
 15=Créer le fichier &dvdid.xml
 16=Créer un fichier &journal
+17=Create disc.&metaiso
+18=Copy only &VIDEO_TS folder
+19=Verify &M2TS files
 
 [DIALOG_15]
 0=Xreveal
