--- a/Xreveal_IND.ini
+++ b/Xreveal_IND.ini
@@ -102,10 +102,13 @@ Author= Lieba Natur Brilian (naturbrilian)
 10=Sisa penyimpanan:
 11=Kapasitas:
 12=&Tetap lindungi
-13=&Verifikasi konten hash
-14=Buat checksum berkas &md5
+13=Verifikasi konten &hash
+14=Buat checksum berkas &MD5
 15=Buat &dvdid.xml
 16=Buat berkas log
+17=Create disc.&metaiso
+18=Copy only &VIDEO_TS folder
+19=Verify &M2TS files
 
 [DIALOG_15]
 0=Xreveal
