--- a/Xreveal_JPN.ini
+++ b/Xreveal_JPN.ini
@@ -102,10 +102,13 @@ Author=Re*Index.(ot_inc)
 10=空き容量:
 11=容量:
 12=プロテクトを保持する(&K)
-13=コンテンツハッシュを確認する(&V)
+13=コンテンツハッシュを確認する(&H)
 14=MD5 チェックサムファイルを作成する(&M)
 15=dvdid.xml を作成する(&D)
 16=ログファイルを作成する
+17=Create disc.&metaiso
+18=Copy only &VIDEO_TS folder
+19=Verify &M2TS files
 
 [DIALOG_15]
 0=Xreveal
