--- a/Xreveal_KOR.ini
+++ b/Xreveal_KOR.ini
@@ -102,10 +102,13 @@ Author=비너스걸 (VenusGirl)
 10=남은 공간:
 11=용량:
 12=보호 유지(&K)
-13=콘텐츠 해시 검증(&V)
+13=콘텐츠 해시 검증(&C)
 14=MD5 체크섬 파일 생성(&M)
 15=dvdid.xml 만들기(&D)
 16=로그 파일 만들기
+17=Create disc.&metaiso
+18=Copy only &VIDEO_TS folder
+19=Verify &M2TS files
 
 [DIALOG_15]
 0=Xreveal
