--- a/Xreveal_SPA.ini
+++ b/Xreveal_SPA.ini
@@ -102,10 +102,13 @@ Author=Steven Rogers, Leandro Botella Penalva
 10=Espacio libre:
 11=Capacidad:
 12=&Mantener protección
-13=&Verificar hash del contenido
-14=Crear archivo de suma de comprobación &md5
+13=Verificar &hash del contenido
+14=Crear archivo de suma de comprobación &MD5
 15=Crear &dvdid.xml
 16=Crear archivo de registro
+17=Create disc.&metaiso
+18=Copy only &VIDEO_TS folder
+19=Verify &M2TS files
 
 [DIALOG_15]
 0=Xreveal
