--- a/Xreveal_SVE.ini
+++ b/Xreveal_SVE.ini
@@ -64,7 +64,7 @@ Author=Sopor
 12=Disable AutoRun
 
 [DIALOG_11]
-0=Bluray
+0=BD / UHD
 3=&Enable Blu-ray support
 4=Ta bort skyddet BD+
 5=Ta bort Bluray-regionskod
@@ -102,10 +102,13 @@ Author=Sopor
 10=Free space:
 11=Capacity:
 12=&Keep protection
-13=&Verify content hash
-14=Create &md5 checksum file
+13=Verify content &hash
+14=Create &MD5 checksum file
 15=Create &dvdid.xml
 16=Create log file
+17=Create disc.&metaiso
+18=Copy only &VIDEO_TS folder
+19=Verify &M2TS files
 
 [DIALOG_15]
 0=Xreveal
@@ -193,7 +196,7 @@ Author=Sopor
 [DIALOG_29]
 0=Actions
 3=Post-Scan action
-4=Specify a command to run after scanning media. <a>Supported macros</a>.
+4=Specify a command to run after opening disc. <a>Supported macros</a>.
 5=Post-Rip action
 6=Specify a command to run after ripping disc. <a>Supported macros</a>.
 
@@ -374,7 +377,7 @@ Author=Sopor
 144=(%u retries)
 145=Pause the operation
 146=Resume the operation
-147=Program
+147=Programs
 148=Busy
 149=&Check for updates
 150=&Save...
