--- a/Xreveal_BUL.ini
+++ b/Xreveal_BUL.ini
@@ -106,6 +106,9 @@ Author=jekovcar
 14=Създай &md5 файл с контролна сума
 15=Създай &dvdid.xml
 16=Създай лог файл
+17=Create disc.&metaiso
+18=Copy only &VIDEO_TS folder
+19=Verify &M2TS files
 
 [DIALOG_15]
 0=Xreveal
