--- a/Xreveal_RUS.ini
+++ b/Xreveal_RUS.ini
@@ -106,6 +106,9 @@ Author=jekovcar
 14=Создать файл контрольной суммы &md5
 15=Создать &dvdid.xml
 16=Создать файл журнала
+17=Create disc.&metaiso
+18=Copy only &VIDEO_TS folder
+19=Verify &M2TS files
 
 [DIALOG_15]
 0=Xreveal
