--- a/Xreveal_SLV.ini
+++ b/Xreveal_SLV.ini
@@ -64,7 +64,7 @@ Author=Jadran Rudec, E-pošta: jrudec@gmail.com
 12=Disable AutoRun
 
 [DIALOG_11]
-0=Pogon Blu-ray
+0=BD / UHD
 3=&Enable Blu-ray support
 4=Odstrani BD+
 5=Odstrani RK (regionalno kodo)
@@ -102,10 +102,13 @@ Author=Jadran Rudec, E-pošta: jrudec@gmail.com
 10=Free space:
 11=Capacity:
 12=&Keep protection
-13=&Verify content hash
-14=Create &md5 checksum file
+13=Verify content &hash
+14=Create &MD5 checksum file
 15=Create &dvdid.xml
 16=Create log file
+17=Create disc.&metaiso
+18=Copy only &VIDEO_TS folder
+19=Verify &M2TS files
 
 [DIALOG_15]
 0=Xreveal
@@ -193,7 +196,7 @@ Author=Jadran Rudec, E-pošta: jrudec@gmail.com
 [DIALOG_29]
 0=Actions
 3=Post-Scan action
-4=Specify a command to run after scanning media. <a>Supported macros</a>.
+4=Specify a command to run after opening disc. <a>Supported macros</a>.
 5=Post-Rip action
 6=Specify a command to run after ripping disc. <a>Supported macros</a>.
 
