--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -19,12 +19,12 @@ Author=Andex
 
 [DIALOG_4]
 0=Spécifier le code de région Blu-ray
-4=La fenêtre se fermera automatiquement après %d secondes.
+4=La fenêtre se fermera automatiquement après %d secondes...
 5=&Ne plus demander
 
 [DIALOG_5]
 0=Spécifier le code de région DVD
-4=La fenêtre se fermera automatiquement après %d secondes.
+4=La fenêtre se fermera automatiquement après %d secondes...
 5=&Ne plus demander
 
 [DIALOG_6]
@@ -104,11 +104,11 @@ Author=Andex
 12=&Conserver la protection
 13=&Vérifier l'intégrité des données
 14=Créer un fichier de contrôle &MD5
-15=Créer le fichier &dvdid.xml
+15=Créer un fichier &dvdid.xml
 16=Créer un fichier &journal
-17=Create disc.&metaiso
-18=Copy only &VIDEO_TS folder
-19=Verify &M2TS files
+17=Créer un &fichier disc.metaiso
+18=Copier &seulement le dossier 'VIDEO_TS'
+19=Vérifier les fichiers M2&TS
 
 [DIALOG_15]
 0=Xreveal
@@ -124,9 +124,9 @@ Author=Andex
 
 [DIALOG_17]
 0=Copie
-3=Tentatives de lecture:
-4=Abandonner lorsque le nombre d'erreurs ignorées dépasse:
-5=Copier seulement le dossier 'VIDEO_TS' (DVD)
+3=&Tentatives de lecture:
+4=&Abandonner lorsque le nombre d'erreurs ignorées dépasse:
+5=&Copier seulement le dossier 'VIDEO_TS' (DVD)
 
 [DIALOG_18]
 0=Enregistrement de la licence Pro
@@ -242,7 +242,7 @@ Author=Andex
 9=B - Europe, Moyen-Orient, Afrique, Australie, Nouvelle-Zélande
 10=C - Russie, Inde, Chine, reste du monde
 11=Demander avant d'ouvrir le disque
-12=Ne plus demander
+12=&Ne plus demander
 13=Aucun lecteur CD/DVD/Blu-ray détecté!\n\nRaisons possibles:\n1. Vous ne disposez pas d'un lecteur CD/DVD/Blu-ray.\n\n2. Le lecteur n'est pas alimenté ou incorrectement branché.
 14=La version du pilote ne correspond pas %d.%d≠%d.%d.\n\nMerci de réinstaller Xreveal.
 15=Certains fichiers sont manquants!\n\nMerci de réinstaller Xreveal.
@@ -257,7 +257,7 @@ Author=Andex
 24=%.1f Mo/s
 25=Processus terminé avec succès!
 26=Pas de clé de déchiffrement trouvée dans {%s}!
-27=&Visiter le site web...
+27=
 28=Echec d'ouverture du disque, code d'erreur: %s
 29=Lecteur
 30=Fabricant
@@ -291,7 +291,7 @@ Author=Andex
 58='%s' existe déjà!\nVoulez-vous le remplacer?
 59=Etes-vous sûr de vouloir annuler?
 60=Votre licence a expiré le %s!
-61=Lecteur
+61=Lecteur multimédia
 62=Code région
 63=Modifications restantes
 64=Région %C
@@ -386,7 +386,7 @@ Author=Andex
 153=Activé
 154=Désactivé
 155=En pause!
-156=Infini
+156=Sans limite
 157=Etes-vous sûr de vouloir annuler votre licence?
 158=Aucun lecteur à scanner par Xreveal!\nVeuillez en sélectionner au moins un dans <a>Lecteurs</a>
-159=Il n'y a pas assez d'espace libre sur le lecteur %C:!
+159=Manque d'espace libre sur le lecteur de destination %C:!
