--- a/Xreveal_KOR.ini
+++ b/Xreveal_KOR.ini
@@ -1,7 +1,7 @@
 ﻿[INFO]
 ID=0x0412
 Name=Korean (한국어)
-Version=2.8.0
+Version=2.8.1
 Author=비너스걸 (VenusGirl)
 1=확인
 2=취소
@@ -387,6 +387,6 @@ Author=비너스걸 (VenusGirl)
 154=사용 안 함
 155=일시 중지
 156=무한대
-157=Are you sure you want to unregister?
-158=No drives are scanned by Xreveal! You can change the settings in <a>My Drives</a>.
-159=There is no enough space on destination drive %C:!
+157=등록을 취소하시겠습니까?
+158=Xreveal에서는 어떤 드라이브도 스캔되지 않습니다! <a>내 드라이브</a>에서 설정을 변경할 수 있습니다.
+159=대상 드라이브에 공간이 충분하지 않습니다 %C:!
