--- a/Xreveal_CHS.ini
+++ b/Xreveal_CHS.ini
@@ -1,7 +1,7 @@
 ﻿[INFO]
 ID=0x0804
 Name=Chinese (简体中文)
-Version=2.8.0
+Version=2.8.1
 Author=Tanuki
 1=确定
 2=取消
@@ -102,13 +102,13 @@ Author=Tanuki
 10=剩余空间:
 11=容量:
 12=保留保护(&K)
-13=验证视频文件哈希值(&H)
-14=创建 &MD5 校验文件
+13=校验视频文件哈希值(&H)
+14=创建 &MD5 文件
 15=创建 &dvdid.xml
 16=创建日志文件
-17=Create disc.&metaiso
-18=Copy only &VIDEO_TS folder
-19=Verify &M2TS files
+17=创建 disc.&metaiso
+18=仅拷贝 VIDEO_TS 文件夹
+19=校验 &M2TS 文件
 
 [DIALOG_15]
 0=Xreveal
@@ -126,7 +126,6 @@ Author=Tanuki
 0=Ripper
 3=读取失败后重试次数:
 4=当忽略的读取错误超过阈值时中止:
-5=只拷贝 VIDEO_TS 文件夹 (DVD)
 
 [DIALOG_18]
 0=注册
@@ -387,6 +386,6 @@ Author=Tanuki
 154=禁用
 155=暂停
 156=无限
-157=Are you sure you want to unregister?
-158=No drives are scanned by Xreveal! You can change the settings in <a>My Drives</a>.
-159=There is no enough space on destination drive %C:!
+157=你确定要取消注册吗?
+158=Xreveal 没有扫描任何驱动器! 您可以在<a>我的光驱</a>中更改设置.
+159=目标驱动器 %C: 上没有足够的空间!
