--- a/Xreveal_DEU.ini
+++ b/Xreveal_DEU.ini
@@ -107,7 +107,7 @@ Author=The Punisher
 15=Erstelle &dvdid.xml
 16=Erstelle Log Datei
 17=Create disc.&metaiso
-18=Copy only &VIDEO_TS folder
+18=Nur VIDEO_TS-Ordner kopieren
 19=Verify &M2TS files
 
 [DIALOG_15]
@@ -126,7 +126,6 @@ Author=The Punisher
 0=Ripper
 3=Anzahl wiederholter Leseversuche:
 4=Abbrechen wenn ignorierte Fehler mehr als:
-5=Nur VIDEO_TS-Ordner kopieren (DVD)
 
 [DIALOG_18]
 0=Xreveal registrieren
