--- a/Xreveal_KOR.ini
+++ b/Xreveal_KOR.ini
@@ -107,7 +107,7 @@ Author=비너스걸 (VenusGirl)
 15=dvdid.xml 만들기(&D)
 16=로그 파일 만들기
 17=Create disc.&metaiso
-18=Copy only &VIDEO_TS folder
+18=VIDEO_TS 폴더만 복사
 19=Verify &M2TS files
 
 [DIALOG_15]
@@ -126,7 +126,6 @@ Author=비너스걸 (VenusGirl)
 0=리퍼
 3=읽기 재시도 횟수:
 4=무시된 오류가 초과하면 중단 :
-5=VIDEO_TS 폴더만 복사 (DVD)
 
 [DIALOG_18]
 0=등록
