--- a/Xreveal_RUS.ini
+++ b/Xreveal_RUS.ini
@@ -107,7 +107,7 @@ Author=jekovcar
 15=Создать &dvdid.xml
 16=Создать файл журнала
 17=Create disc.&metaiso
-18=Copy only &VIDEO_TS folder
+18=Копировать только VIDEO_TS folder
 19=Verify &M2TS files
 
 [DIALOG_15]
@@ -126,7 +126,6 @@ Author=jekovcar
 0=Риппер
 3=Счет попыток чтения:
 4=Прервать, если игнорируемых ошибок превышает :
-5=Копировать только VIDEO_TS folder (DVD)
 
 [DIALOG_18]
 0=Регистрация Xreveal
