--- a/Xreveal_SPA.ini
+++ b/Xreveal_SPA.ini
@@ -107,7 +107,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 15=Crear &dvdid.xml
 16=Crear archivo de registro
 17=Create disc.&metaiso
-18=Copy only &VIDEO_TS folder
+18=Copiar solo la carpeta VIDEO_TS
 19=Verify &M2TS files
 
 [DIALOG_15]
@@ -126,7 +126,6 @@ Author=Steven Rogers, Leandro Botella Penalva
 0=Copiador
 3=Número de reintentos de lectura:
 4=Abortar cuando los errores ignorados excedan :
-5=Copiar solo la carpeta VIDEO_TS (DVD)
 
 [DIALOG_18]
 0=Registrar Xreveal
