--- a/Xreveal_BUL.ini
+++ b/Xreveal_BUL.ini
@@ -107,7 +107,7 @@ Author=jekovcar
 15=Създай &dvdid.xml
 16=Създай лог файл
 17=Create disc.&metaiso
-18=Copy only &VIDEO_TS folder
+18=Копирай само VIDEO_TS folder
 19=Verify &M2TS files
 
 [DIALOG_15]
@@ -126,7 +126,6 @@ Author=jekovcar
 0=Рипър
 3=Брой опити за четене:
 4=Прекрати, когато грешките надвишат :
-5=Копирай само VIDEO_TS folder (DVD)
 
 [DIALOG_18]
 0=Регистрация на Xreveal
